--- a/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2_simple.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2_simple.html
@@ -9,13 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="res/css/custome_dlg.css">
 	<link rel="stylesheet" href="res/css/data_analysis.css"/>
 
-	<script type="text/javascript" src="res/local/mockdata.js"></script>
-	<script type="text/javascript" src="res/libs/underscore-min.js"></script>
-	<script type="text/javascript" src="res/libs/jquery-1.10.2.min.js"></script><!--TODO avalon template tab_panel_temp-->
-	<script type="text/javascript" src="res/libs/avalon.js"></script>
-	<script type="text/javascript" src="res/js/main.js"></script>
-	<script type="text/javascript" src="res/js/data_analysis.js"></script>
-
 </head>
 <body class="easyui-layout body-content"  ms-controller="test"  ms-click="bodyClick()">
 	<div data-options="region:'west',split:true" class="leftbar" style="width:150px;padding:4px;">
@@ -23,7 +16,7 @@
 			<h2 class="leftbar_title">维度</h2>
 			<div class="section_detail_cont"  > <!--拖拽适用范围 行列-->
 				<ul class="section_ul" id="dimension_sec">
-					<li  ms-repeat="data.dimension" ms-if-loop="el" ms-title="{{el.detail}}" data-typede = "dimension" ms-mousedown="rightClickDem(event)"  data-type="1" oncontextmenu="return false" ms-on-dragstart="drag(event)" draggable="true" ms-data-id=el.id ms-data-name=el.label ms-attr-id={{el.id}}>{{el.label}}</li> <!--ms-repeat-el="data.dimension"-->
+					<li  ms-repeat="data.dimension" ms-if-loop="el" ms-attr-title="{{el.detail}}" data-typede = "dimension" ms-mousedown="rightClickDem(event)"  data-type="1" oncontextmenu="return false" ms-on-dragstart="drag(event)" draggable="true" ms-data-id=el.id ms-data-name=el.label ms-attr-id={{el.id}}>{{el.label}}</li> <!--ms-repeat-el="data.dimension"-->
 				</ul>
 				<ul class="section_ul new_sec" id="new_dimension_sec"  ms-if="data.dimension_new.length">
 					<li ms-repeat="data.dimension_new" ms-if-loop="el" title="拖拽我" data-typede = "dimension" draggable="true"  ms-mousedown="rightClickDem()" data-type="2" oncontextmenu="return false" ms-on-dragstart="drag(event)" ms-data-name=el.label ms-data-id=el.id>{{el.label}}</li>
@@ -33,11 +26,11 @@
 			<h2 class="leftbar_title">度量</h2>
 			<div class="section_detail_cont"  ><!--拖拽适用范围 度量-->
 				<ul class="section_ul" id="metric_sec">
-					<li  ms-repeat="data.magnanimity" ms-if-loop="el" ms-title="{{el.detail}}" data-typede = "magnanimity"  ms-mousedown="rightClickMetric(event)" data-type="3"  oncontextmenu="return false" ms-on-dragstart="drag(event)" oncontextmenu="return false" draggable="true" ms-data-id=el.id ms-data-name=el.label ms-attr-id={{el.id}}>{{el.label}}</li>
+					<li  ms-repeat="data.magnanimity" ms-if-loop="el" ms-attr-title="{{el.detail}}" data-typede = "magnanimity"  ms-mousedown="rightClickMetric(event)" data-type="3"  oncontextmenu="return false" ms-on-dragstart="drag(event)" oncontextmenu="return false" draggable="true" ms-data-id=el.id ms-data-name=el.label ms-attr-id={{el.id}}>{{el.label}}</li>
 				</ul>
 
 				<ul class="section_ul new_sec" id="new_metric_sec" ms-if="data.magnanimity_new.length">
-					<li  ms-repeat="data.magnanimity_new" ms-if-loop="el" title="拖拽我" ms-title="{{el.detail}}" data-typede = "magnanimity" ms-mousedown="rightClickMetric(event)" data-type="4"  oncontextmenu="return false"  ms-on-dragstart="drag(event)" oncontextmenu="return false" draggable="true" ms-data-id=el.id ms-data-name=el.label ms-attr-id={{el.id}}>{{el.label}}</li>
+					<li  ms-repeat="data.magnanimity_new" ms-if-loop="el" title="拖拽我" ms-attr-title="{{el.detail}}" data-typede = "magnanimity" ms-mousedown="rightClickMetric(event)" data-type="4"  oncontextmenu="return false"  ms-on-dragstart="drag(event)" oncontextmenu="return false" draggable="true" ms-data-id=el.id ms-data-name=el.label ms-attr-id={{el.id}}>{{el.label}}</li>
 				</ul>
 			</div>
 		</section>
@@ -62,7 +55,7 @@
 			</ul>
 			<!------右栏tab 结束----->
 
-			<div class="tab-content" id="tab_content">
+			<div class="tab-content" id="tab_content" style="height: 100%">
 				<div class="input-div">
 					<span class="input-label">列</span>
 					<div class="selected-container-div input-content">
@@ -114,7 +107,7 @@
 					<span class="input-label">筛选</span>
 					<div class="input-content magnanimity-content" data-type="filter" data-typede = "dimension" ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" class="easyui-tooltip"  title="拖动到这里，增加数据">
 						<span ms-if="!data.selected_den.filter || !data.selected_den.filter.length" class="tips">拖动到这里，增加数据</span>
-						<span class="selected-filter"   ms-repeat-el="data.selected_den.filter" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index  ms-title=el.title> <!--  ms-attr-id={{el.id}}-->
+						<span class="selected-filter"   ms-repeat-el="data.selected_den.filter" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index  ms-attr-title=el.title> <!--  ms-attr-id={{el.id}}-->
                            <a href="javascript:void(0)"  ms-click="editfilter()">
 							   {{el.name}}
 						   </a>
@@ -135,4 +128,12 @@
     <div ms-include-src="'res/template/addSubjectDlg.html'"></div><!--所有dlg的定义--->
 </body>
 
+<script type="text/javascript" src="res/local/mockdata.js"></script>
+<!--<script type="text/javascript" src="res/libs/jquery-1.10.2.min.js"></script>--><!--&lt;!&ndash;TODO avalon template tab_panel_temp&ndash;&gt;-->
+<!--<script type="text/javascript" src="res/libs/avalon.js"></script>-->
+<script type="text/javascript" src="res/libs/avalon.modern.js"></script>
+<script type="text/javascript" src="res/libs/require.js"></script>
+<script src="res/js/main.js" type="text/javascript"></script>
+<script type="text/javascript" src="res/js/data_analysis.js"></script>
+<!--<script type="text/javascript" src="res/libs/datagrid.js"></script>-->
 </html>
