--- a/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2_simple.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2_simple.html
@@ -61,7 +61,7 @@
 					<div class="selected-container-div input-content">
 						<div class="input-content dimension-content" data-type="column"  data-typede = "dimension"  ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动维度到这里，增加列" class="easyui-tooltip">
 							<span ms-if="!data.selected_den.column || !data.selected_den.column.length" class="tips">拖动维度到这里，增加列</span>
-						<span ms-repeat-el="data.selected_den.column"  class="selected-dimension" draggable="true"  data-typede = "dimension" ms-on-dragstart="drag(event)"  ms-data-id=el.id ms-data-index=$index ms-data-name=el.name>
+						<span ms-repeat-el="data.selected_den.column" data-repeat-rendered="render" class="selected-dimension" draggable="true"  data-typede = "dimension" ms-on-dragstart="drag(event)"  ms-data-id=el.id ms-data-index=$index ms-data-name=el.name>
 							<span  >{{el.name}}</span>
 							<a href="javascript:void(0)" class="tabs-close" ms-click="remove('column', el.id)" data-index="0">&nbsp;</a>
 						</span>
