--- a/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2_simple.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2_simple.html
@@ -117,7 +117,6 @@
                       <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
                      <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear" style="width: 27px; height: 27px;"></a></span>
 				</div>
-
 				<table id="dg" style="height: 150px;"></table>
 				<div class="nodata">未查询到数据</div>
 			</div>
@@ -128,8 +127,7 @@
     <div ms-include-src="'res/template/addSubjectDlg.html'"></div><!--所有dlg的定义--->
 </body>
 
-<script type="text/javascript" src="res/local/mockdata.js"></script>
-<!--<script type="text/javascript" src="res/libs/jquery-1.10.2.min.js"></script>--><!--&lt;!&ndash;TODO avalon template tab_panel_temp&ndash;&gt;-->
+<script type="text/javascript" src="res/local/mockdata.js"></script> <!--TODO TEST-->
 <!--<script type="text/javascript" src="res/libs/avalon.js"></script>-->
 <script type="text/javascript" src="res/libs/avalon.modern.js"></script>
 <script type="text/javascript" src="res/libs/require.js"></script>
